--- a/package.json
+++ b/package.json
@@ -4,26 +4,21 @@
   "private": true,
   "main": "main.js",
   "dependencies": {
+    "edge": "^7.10.1",
+    "edge-py": "^0.1.0",
     "electron": "^1.7.9",
+    "electron-edge-js": "^8.2.9",
+    "electron-rebuild": "^1.6.0",
     "material-ui": "^0.19.4",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "sqlite3": "^3.1.13"
   },
   "scripts": {
     "start": "./node_modules/.bin/electron .",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "rebuild": "electron-rebuild -f -w sqlite3 -v 1.7.9"
   },
-  "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "css-loader": "^0.28.7",
-    "style-loader": "^0.19.0"
-  }
+  "devDependencies": {}
 }
